fix: filename codeblock spacing

--- a/src/tags/app-code-block/app-code-block.style.scss
+++ b/src/tags/app-code-block/app-code-block.style.scss
@@ -25,7 +25,7 @@
     monospace;
 
   & ~ * pre {
-    margin-top: 0.5rem;
+    margin-top: 0.5rem !important;
   }
 }
 
